# gitmagic

./: CMakeLists.txt  README.md  f2 change.txt  tutorial.cc
MathFunctions/: CMakeLists.txt  MathFunctions.cc  MathFunctions.h
